# 6.506-project

./: .gitignore  Makefile  Tasks.txt  dataProcessing.py  duration_20_mf_.4_perfMixed_graveyard_noredis (1).txt
perf_tests/: CMakeLists.txt  Makefile  element_shifting_time.txt  full_perf_nocmake.cpp  graveyard_perf.cc  graveyard_perfInsert_betweenrunsinsert  graveyard_perfInsert_evenlydistribute  graveyard_perf_nocmake.cpp  normal_perf.cc  normal_perf_nocmake.cpp  normal_tests  parser.py  perfDelete_no_reditsribution.txt  perfDelete_refactored1.txt  perfInsert_between_runs_16.txt  perfInsert_evenly_distribute.txt  perfInsert_refactored.txt  perfMixed_between_runs.txt  perfMixed_between_runs_insert_15.txt  revised_perf_tests.cpp  run_tests.sh  tombstone_shifting_time.txt
perf_tests/results/: graveyard_betweenrunsinsert_perfInsert.txt  graveyard_evenlydist_perfDelete.txt  graveyard_evenlydist_perfMixed.txt  graveyard_noredis_perfMixed.txt  normal_perfDelete.txt  normal_perfInsert.txt
perf_tests/results_old/: graveyard_betweenruns_perfDelete.txt  graveyard_betweenruns_perfInsert.txt  graveyard_betweenruns_perfMixed.txt  graveyard_betweenrunsinsert_perfDelete.txt  graveyard_betweenrunsinsert_perfMixed.txt  graveyard_evenlydist_perfInsert.txt  graveyard_noredis_perfDelete.txt  graveyard_noredis_perfInsert.txt  graveyard_tests  normal_perfMixed.txt
perf_tests/results_revised/: amortized_clean_perfDelete.txt  amortized_clean_perfInsert.txt  amortized_clean_perfMixed.txt  between_runs_insert_perfDelete.txt  between_runs_insert_perfInsert.txt  between_runs_insert_perfMixed.txt  between_runs_perfInsert.txt  between_runs_perfMixed.txt  evenly_dist_perfDelete.txt  evenly_dist_perfInsert.txt  evenly_dist_perfMixed.txt  no_redist_perfDelete.txt  no_redist_perfInsert.txt  no_redist_perfMixed.txt  normal_perfDelete.txt  normal_perfMixed.txt  test.txt
perf_tests/results_test/: amortized_clean_new_perfDelete.txt  amortized_clean_new_perfInsert.txt  amortized_clean_perfDelete.txt  amortized_clean_perfInsert.txt  amortized_clean_perfMixed.txt  between_runs_insert_new_perfDelete.txt  between_runs_insert_new_perfInsert.txt  between_runs_insert_new_perfMixed.txt  between_runs_insert_perfInsert.txt  between_runs_new_perfInsert.txt  between_runs_new_perfMixed.txt  between_runs_perfDelete.txt  between_runs_perfInsert.txt  between_runs_perfMixed.txt  no_redist_new_perfDelete.txt  no_redist_new_perfInsert.txt  no_redist_new_perfMixed.txt  no_redist_perfDelete.txt  no_redist_perfInsert.txt  no_redist_perfMixed.txt  normal_perfInsert.txt  normal_perfMixed.txt
perf_tests/results_v1/: perfDelete_between_runs.txt  perfDelete_between_runs_insert.txt  perfDelete_evenly_distribute.txt  perfDelete_ordinary.txt  perfInsert_between_runs_insert.txt  perfInsert_evenly_distribute.txt  perfInsert_no_redistribution.txt  perfInsert_ordinary.txt  perfMixed_between_runs.txt  perfMixed_evenly_distribute.txt  perfMixed_no_redistribution.txt  perfMixed_ordinary.txt
perf_tests/results_v2/: amortized_clean_new_perfDelete.txt  amortized_clean_new_perfInsert.txt  amortized_clean_new_perfMixed.txt  between_runs_insert_new_perfDelete.txt  between_runs_insert_new_perfInsert.txt  between_runs_insert_new_perfMixed.txt  between_runs_insert_perfDelete.txt  between_runs_insert_perfInsert.txt  between_runs_insert_perfMixed.txt  between_runs_new_perfDelete.txt  between_runs_new_perfInsert.txt  (+13 more)
tests/: CMakeLists.txt  graveyard_filter_tests.cc  graveyard_perf.cc  normal_filter_tests.cc  normal_perf.cc  performance_tests.py  redistribution_tests.cc  run_tests.sh
(+42 files in other folders)
